--- a/environment.env
+++ b/environment.env
@@ -1,6 +1,7 @@
-AZURE_OAI_ENDPOINT="xxxxxxx"
-AZURE_OAI_KEY="xxxxxxx"
-AZURE_OAI_DEPLOYMENT="xxxxxxx"
-AZURE_SEARCH_ENDPOINT="xxxxxxx"
-AZURE_SEARCH_KEY="xxxxxxxxx"
-AZURE_SEARCH_INDEX="xxxxxxx"
+AZURE_OAI_ENDPOINT="https://zshqywguqywg7yqghwqu.openai.azure.com/"
+AZURE_OAI_KEY="xxxxxxxxxxxxxxxxxx"
+AZURE_OAI_DEPLOYMENT="gpt-35-turbo-16k"
+AZURE_SEARCH_ENDPOINT="https://qwweewrr.search.windows.net"
+AZURE_SEARCH_KEY="xxxxxxxxxxxxxxxx"
+AZURE_SEARCH_INDEX="margies-index"
+
